kubernetes/apps/streaming/pulsar/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pulsar
spec:
  hostnames: ["pulsar.goyangi.io"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: pulsar-proxy
          namespace: streaming
          port: 80
